Improvements to 'Featured Content'

--- a/featured-content-slider/featured-content-slider.css
+++ b/featured-content-slider/featured-content-slider.css
@@ -1,48 +1,60 @@
 .slideshow {
-    margin-top: calc(50vh - 25vh);
-    padding-bottom: 4vw;
+    padding: 40px 0;
   }
   
   .slide {
     width: 75%;
-    max-resolution: 4vw;
     margin-right: 4vw;
-    text-align: center;
-    height: 50vh;
-    background-color: red;
-    border-radius: 6px;
-    color: #fff;
-    font-family: "Helvetica Neue", helvetica, arial;
-    font-size: 24px;
-    line-height: 50vh;
   }
-  .slide:nth-child(1) {
-    background-color: #2b00ff;
-  }
-  .slide:nth-child(2) {
-    background-color: #5500ff;
-  }
-  .slide:nth-child(3) {
-    background-color: #8000ff;
-  }
-  .slide:nth-child(4) {
-    background-color: #aa00ff;
-  }
-  .slide:nth-child(5) {
-    background-color: #d500ff;
-  }
-  .slide:nth-child(6) {
-    background-color: fuchsia;
-  }
-  .slide:nth-child(7) {
-    background-color: #ff00d5;
-  }
-  .slide:nth-child(8) {
-    background-color: #ff00aa;
-  }
-  .slide:nth-child(9) {
-    background-color: #ff0080;
-  }
-  .slide:nth-child(10) {
-    background-color: #ff0055;
-  }
+
+.content-container{
+  display: flex;
+}
+
+.content-col-text{
+  flex: 60%;
+  align-content: flex-start;
+  padding: 30px;
+  color: #7f2549;
+}
+
+.content-col-image{
+  flex: 40%;
+  align-content: flex-start;
+}
+
+img{
+  width: 100%;
+}
+
+.dm-sans{
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}  
+
+.cormorant{
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.cta{
+  background: 0 0;
+  text-align: center;
+  width: 25%;
+  position: relative;
+  z-index: 1;
+  border: 1px solid rgba(127,37,73,.8);
+  color: #7f2549;
+  border-radius: 0;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 12px;
+  letter-spacing: .3125rem;
+  line-height: 1.125rem;
+  padding: 0.4375rem 2.125rem 0.5625rem;
+  text-transform: uppercase;
+  text-decoration: none;
+}
